Always show the vertical scrollbar to stop the horizontal centering from jumping around between short and long pages.

--- a/src/stylesheets/application.sass
+++ b/src/stylesheets/application.sass
@@ -3,6 +3,7 @@ body
     family: "Helvetica"
     size: 11pt
   background: url('/images/background.png') repeat top left
+  overflow-y: scroll
 
 #banner
   background: url('/images/banner.jpg')
